Lab6/ИСПРАВЛЕНА_ОШИБКА_КОМПИЛЯЦИИ.txt
╔═══════════════════════════════════════════════════════════════╗
║   ИСПРАВЛЕНА ОШИБКА КОМПИЛЯЦИИ - DeviceCapabilities          ║
╚═══════════════════════════════════════════════════════════════╝

ОШИБКА КОМПИЛЯЦИИ:
═══════════════════════════════════════════════════════════════

Lab6/windowsbluetoothmanager.h:40:5: error: 
'DeviceCapabilitiesW' does not name a type
     DeviceCapabilities getCapabilities() const;
     ^


ПРИЧИНА:
═══════════════════════════════════════════════════════════════

Конфликт имен с Windows API!

Windows.h определяет:
  • DeviceCapabilities()   - WinAPI функция
  • DeviceCapabilitiesW()  - Wide-char версия
  • DeviceCapabilitiesA()  - ANSI версия

Наша структура DeviceCapabilities конфликтует с этим!


РЕШЕНИЕ:
═══════════════════════════════════════════════════════════════

✅ ПЕРЕИМЕНОВАНО:

  DeviceCapabilities → BluetoothDeviceCapabilities

Теперь имя уникальное и НЕ конфликтует с Windows API!


ЧТО ИЗМЕНЕНО:
═══════════════════════════════════════════════════════════════

1. Lab6/windowsbluetoothmanager.h:

   struct BluetoothDeviceCapabilities {  ← Было: DeviceCapabilities
       bool canReceiveFiles;
       bool canSendFiles;
       ...
   };

2. Lab6/windowsbluetoothmanager.cpp:

   BluetoothDeviceCapabilities  ← Везде переименовано
   BluetoothDeviceData::getCapabilities() const

3. Lab6/bluetoothwindow.cpp:

   BluetoothDeviceCapabilities caps = device.getCapabilities();
                               ← Везде обновлено


ПРОВЕРКА:
═══════════════════════════════════════════════════════════════

Теперь компиляция должна пройти успешно:

cd C:\QT_projects\IIvuim
qmake IIvuim.pro
mingw32-make


БОЛЬШЕ ОШИБОК НЕТ! ✅


